# data-ornl

./: .gitignore  README.md  data.csv  environment.yml  pyproject.toml
lib/: core.py
notebooks/: people.ipynb  sandbox.ipynb
src/: core.py
