[project]
name = "data-ornl-people"
requires-python = ">=3.10"

[tool.pixi.project]
authors = ["Jason Wohlgemuth <wohlgemuthjh@ornl.gov>"]
channels = ["conda-forge", "main", "r", "msys2"]
description = "Metadata for ORNL people"
platforms = ["linux-64"]
version = "0.1.0"

[tool.pixi.dependencies]
black = "*"
bottleneck = "*"
conda = "*"
conda-merge = "*"
conda-pack = "*"
dask = "*"
ibis-framework = "*"
icecream = ">=2.1.3,<3"
ipykernel = "*"
ipywidgets = "*"
nanoid = "*"
numba = "*"
numpy = "*"
pandas = "*"
pip = "*"
pixi-kernel = ">=0.5.1,<0.6"
polars = "*"
ptpython = "*"
pyarrow = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
python = "<3.11"
pyyaml = "*"
ruff = "*"
tqdm = "*"
types-tqdm = ">=4.66.0.20240417,<5"
types-beautifulsoup4 = ">=4.12.0.20241020,<5"
xarray = "*"
zarr = "*"
mypy = ">=1.13.0,<2"
pyright = ">=1.1.388,<2"

[tool.pixi.pypi-dependencies]
beautifulsoup4 = "*"
hypothesis = "*"

[tool.pixi.tasks]
repl = "ptpython"
test = "pytest"
black = "black lib tests"
check = { cmd = "ruff check --fix lib notebooks tests" }
format = { cmd = "ruff format lib notebooks tests", depends-on = [ "black", "check" ] }
mypy = { cmd = "mypy --check-untyped-defs lib/core.py" }
pyright = { cmd = "pyright lib/core.py" }

[tool.pytest.ini_options]
minversion = "7.1.1"
addopts = "-p no:warnings -v -s --cov=lib --cov-report term --cov-report xml"
testpaths = [
    "tests"
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 200
indent-width = 4
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = [
    "C90", # mccabe complexity
    "D", # pydocstyle
    "E", # pycodestyle (error)
    "F", # pyflakes
    "FLY", # flynt
    "I", # isort
    "PERF", # perflint
    "PL", # Pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "D103", # undocumented-public-function
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"lib/__init__.py" = [
    "D104", # undocumented-public-package
]
"tests/__init__.py" = [
    "D104", # undocumented-public-package
]


[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.black]
line-length = 200
quiet = true
target-version = ["py310"]
